styles fix overflow

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -21,6 +21,7 @@ body {
 body {
   color: var(--font-color);
   background: var(--background-color);
+  overflow:hidden;
 }
 
 a {
